# gurgle

./: setup.cfg
.github/workflows/: ci.yml
gurgle/: base.py  live_plot.py
