[metadata]
root_url = https://github.com/otosense/
url = https://github.com/otosense/gurgle
license = apache-2.0
author = OtoSense
version = 0.0.9
description = Wrappers to extend ML processing components (perform online/mini-batch learning - track residues - store data - track drift etc.)
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = gurgle
display_name = gurgle

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	creek
	lined
	taped
	slang
		

[options.entry_points]
console_scripts = 
	gurgle-terminal = gurgle.terminal:main


